//
// Protocol for working with registry
//

syntax = "proto3";

package registry;

message RelayData {
    message Offer {
        uint64 conn_id = 2;
        string sdp = 3;
    }

    message Answer {
        uint64 conn_id = 2;
        string sdp = 3;
    }

    oneof data {
        Offer offer = 3;
        Answer answer = 4;
    }
}

message ToRegistry {
    message UpdateRequest {
        uint32 from_layer = 1;
        uint32 to_layer = 2;
    }

    message NeighboursRequest {

    }

    message Relay {
        string dest = 1;
        RelayData data = 2;
    }

    oneof event {
        UpdateRequest update = 2;
        NeighboursRequest neighbours = 3;
        Relay relay = 4;
    }
}

message ToWorker {
    message UpdateReply {
        repeated string neighbours = 1;
    }

    message NeighboursReply {
        repeated string neighbours = 1;
    }

    message Relay {
        string source = 1;
        RelayData data = 2;
    }

    oneof event {
        UpdateReply update = 2;
        NeighboursReply neighbours = 3;
        Relay relay = 4;
    }
}
